@@ -43,6 +43,9 @@ import org.springframework.util.ErrorHandler;
  * Every partition, created by this class, is a {@link UnicastingDispatcher}
  * delegate based on a single thread {@link Executor}.
  * <p>
+ * The number of partitions should be a reasonable value for the application environment
+ * since every partition is based on a dedicated thread for message processing.
+ * <p>
  * The rest of the logic is similar to {@link UnicastingDispatcher} behavior.
  *
  * @author Artem Bilan
@@ -70,6 +73,13 @@ public class PartitionedDispatcher extends AbstractDispatcher {
 
 	private MessageHandlingTaskDecorator messageHandlingTaskDecorator = task -> task;
 
+	/**
+	 * Instantiate based on a provided number of partitions and function for partition key against
+	 * the message to dispatch.
+	 * @param partitionCount the number of partitions in this channel.
+	 * @param partitionKeyFunction the function to resolve a partition key against the message
+	 * to dispatch.
+	 */
 	public PartitionedDispatcher(int partitionCount, Function<Message<?>, Object> partitionKeyFunction) {
 		Assert.isTrue(partitionCount > 0, "'partitionCount' must be greater than 0");
 		Assert.notNull(partitionKeyFunction, "'partitionKeyFunction' must not be null");
@@ -77,28 +87,56 @@ public class PartitionedDispatcher extends AbstractDispatcher {
 		this.partitionCount = partitionCount;
 	}
 
+	/**
+	 * Set a {@link ThreadFactory} for executors per partitions.
+	 * Defaults to the {@link CustomizableThreadFactory} based on a {@code partition-thread-} prefix.
+	 * @param threadFactory the {@link ThreadFactory} to use.
+	 */
 	public void setThreadFactory(ThreadFactory threadFactory) {
 		Assert.notNull(threadFactory, "'threadFactory' must not be null");
 		this.threadFactory = threadFactory;
 	}
 
+	/**
+	 * Specify whether partition dispatchers should have failover enabled.
+	 * By default, it will. Set this value to 'false' to disable it.
+	 * @param failover The failover boolean.
+	 */
 	public void setFailover(boolean failover) {
 		this.failover = failover;
 	}
 
+	/**
+	 * Provide a {@link LoadBalancingStrategy} for partition dispatchers.
+	 * @param loadBalancingStrategy The load balancing strategy implementation.
+	 */
 	public void setLoadBalancingStrategy(@Nullable LoadBalancingStrategy loadBalancingStrategy) {
 		this.loadBalancingStrategy = loadBalancingStrategy;
 	}
 
+	/**
+	 * Provide a {@link ErrorHandler} for wrapping partition {@link Executor}
+	 * to the {@link ErrorHandlingTaskExecutor}.
+	 * @param errorHandler the {@link ErrorHandler} to use.
+	 */
 	public void setErrorHandler(ErrorHandler errorHandler) {
 		this.errorHandler = errorHandler;
 	}
 
+	/**
+	 * Set a {@link MessageHandlingTaskDecorator} to wrap a message handling task into some
+	 * addition logic, e.g. message channel may provide an interception for its operations.
+	 * @param messageHandlingTaskDecorator the {@link MessageHandlingTaskDecorator} to use.
+	 */
 	public void setMessageHandlingTaskDecorator(MessageHandlingTaskDecorator messageHandlingTaskDecorator) {
 		Assert.notNull(messageHandlingTaskDecorator, "'messageHandlingTaskDecorator' must not be null.");
 		this.messageHandlingTaskDecorator = messageHandlingTaskDecorator;
 	}
 
+	/**
+	 * Shutdown this dispatcher on application close.
+	 * The partition executors are shutdown and internal state of this instance is cleared.
+	 */
 	public void shutdown() {
 		this.executors.forEach(ExecutorService::shutdown);
 		this.executors.clear();
@@ -107,9 +145,18 @@ public class PartitionedDispatcher extends AbstractDispatcher {
 
 	@Override
 	public boolean dispatch(Message<?> message) {
-		int partition = this.partitionKeyFunction.apply(message).hashCode() % this.partitionCount;
-		UnicastingDispatcher partitionDispatcher = this.partitions.computeIfAbsent(partition, (__) -> newPartition());
+		prePopulatedPartitionsIfAny();
+		int partition = Math.abs(this.partitionKeyFunction.apply(message).hashCode()) % this.partitionCount;
+		UnicastingDispatcher partitionDispatcher = this.partitions.get(partition);
 		return partitionDispatcher.dispatch(message);
+	}
+
+	private void prePopulatedPartitionsIfAny() {
+		if (this.partitions.isEmpty()) {
+			for (int i = 0; i < this.partitionCount; i++) {
+				this.partitions.put(i, newPartition());
+			}
+		}
 	}
 
 	private UnicastingDispatcher newPartition() {
