@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2021 the original author or authors.
+ * Copyright 2016-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -147,6 +147,27 @@ public final class MessageChannels {
 
 	public static FluxMessageChannelSpec flux(String id) {
 		return flux().id(id);
+	}
+
+	/**
+	 * Create a {@link PartitionedChannelSpec}.
+	 * @param partitionCount the number of partitions in the channel.
+	 * @return the {@link PartitionedChannelSpec}.
+	 * @since 6.1
+	 */
+	public static PartitionedChannelSpec partitioned(int partitionCount) {
+		return new PartitionedChannelSpec(partitionCount);
+	}
+
+	/**
+	 * Create a {@link PartitionedChannelSpec}.
+	 * @param id the bean name for the channel.
+	 * @param partitionCount the number of partitions in the channel.
+	 * @return the {@link PartitionedChannelSpec}.
+	 * @since 6.1
+	 */
+	public static PartitionedChannelSpec partitioned(String id, int partitionCount) {
+		return new PartitionedChannelSpec(partitionCount).id(id);
 	}
 
 	private MessageChannels() {
